# routine-api

./: .gitignore  Makefile  README.md  pyproject.toml
routine/: __init__.py  util.py  version.py
routine/api/: __init__.py  client.py  pages_endpoint.py  tasks_endpoint.py
routine/model/: __init__.py  page.py  task.py
tests/integration/: test_task_integration.py
tests/unit/: test_page_model.py
